plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'

	id 'jacoco'
	id "org.sonarqube" version "5.0.0.4638"
}

group = 'com.finance'
version = '0.0.1-SNAPSHOT'
description = 'Portfolio project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'io.github.cdimascio:dotenv-java:3.0.0' // 환경변수 강제 주입
	implementation 'org.jsoup:jsoup:1.18.1' // utext XSS공격 방지
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1' // AWS S3

	// 스프링 시큐리티 추가 + 테스트 환경도
	implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
	// JWT 생성 및 검증
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// Bucket4j 코어(무차별 대입 공격 방어)
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	// plain.jar 생성 방지
    enabled = false
}

// 2. JaCoCo 설정
jacoco {
    toolVersion = "0.8.12"
}

// 3. 테스트 리포트 설정
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // test가 끝나면 자동으로 리포트 생성
}

jacocoTestReport {
    dependsOn test // 리포트 생전에 test가 먼저 실행되어야 함
    reports {
        xml.required = true // 소나큐브는 XML 리포트를 읽습니다
        csv.required = false
        html.required = true // 개발자가 직접 확인하기 용이함
    }
	afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                "**/*Dto*",
                "**/*Request*",
                "**/*Response*",
                "**/entity/**",
				"**/domain/post/**",
				"**/domain/category/**",
                "**/FinalPortfolioApplication*" // 메인 클래스 제외
            ])
        }))
    }
}

sonarqube {
    properties {
        property "sonar.coverage.exclusions", "**/domain/post/**, **/domain/category/**, **/*Dto*, **/*Request*, **/*Response*, **/entity/**"
    }
}

sonar {
    properties {
        property "sonar.projectKey", "hello6135_finance-portfolio"
        property "sonar.organization", "ljh-finance"
        property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.java.binaries", "build/classes/java/main"
    }
}
